tolk-tester/tests/invalid-declaration/err-1697.tolk

enum Color { Red = ton("0.05") as int }

/**
@compilation_should_fail
@stderr unsupported operation in `enum` member value
 */
